objects/MulCommits2__c.object
<CustomObject>
    <fields>
        <fullName>Field2__c</fullName>
        <description>NA3 Sai K</description>
        <label>Field2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <inlineHelpText>Na3 sai</inlineHelpText>
        <label>Field3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MulCommits2Field__c</fullName>
        <label>MulCommits2Field</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>MulCommits2</label>
    <nameField>
        <label>MulCommits2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MulCommits2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MulTestRule</fullName>
        <active>true</active>
        <description>Test demo</description>
        <errorConditionFormula>Name  &lt;&gt; &quot;pavan&quot;</errorConditionFormula>
        <errorMessage>Test</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule2</fullName>
        <active>true</active>
        <errorConditionFormula>Name  &lt;&gt; &quot;sudeep&quot;</errorConditionFormula>
        <errorDisplayField>Field2__c</errorDisplayField>
        <errorMessage>Error</errorMessage>
    </validationRules>
</CustomObject>